violating_resources/pod-security-policy/apparmor/samples/psp-apparmor/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-apparmor-allowed
  name: nginx-apparmor-allowed
  annotations:
    # apparmor.security.beta.kubernetes.io/pod: unconfined # runtime/default
    container.apparmor.security.beta.kubernetes.io/nginx: runtime/default
  labels:
    app: nginx-apparmor
spec:
  containers:
  - name: nginx
    image: nginx
