violating_resources/pod-security-policy/apparmor/samples/psp-apparmor/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-apparmor-disallowed
  name: nginx-apparmor-disallowed
  annotations:
    # apparmor.security.beta.kubernetes.io/pod: unconfined # runtime/default
    container.apparmor.security.beta.kubernetes.io/nginx: unconfined
  labels:
    app: nginx-apparmor
spec:
  containers:
  - name: nginx
    image: nginx
