violating_resources/pod-security-policy/apparmor/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata: # kpt-merge: /apparmor
  name: apparmor
tests:
  - name: apparmor
    template: template.yaml
    constraint: samples/psp-apparmor/constraint.yaml
    cases:
      - name: example-allowed
        object: samples/psp-apparmor/example_allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: samples/psp-apparmor/example_disallowed.yaml
        assertions:
          - violations: yes
      - name: disallowed-ephemeral
        object: samples/psp-apparmor/disallowed_ephemeral.yaml
        assertions:
          - violations: yes
